# 42-school

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  automate-git-update.sh  script.sh
.scripts/: automate-git-update.sh
42cursus/libft/: Makefile  README.md  ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
42piscine/: README.md
42piscine/ex00/: end.c  ft_case.c  ft_last.c  ft_missing.c  ft_three_no_hidden.c  initial.c  l_first_if.c  l_last_if.c  main.c  place_one.c  solve.c  special_case.c  special_case_a.c  special_case_b.c  special_three.c
Cursus/Rank00/libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
Cursus/Rank01/born2beroot/: README.md
Cursus/Rank01/get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
Cursus/Rank01/printf/: Makefile  README.md
Cursus/Rank01/printf/includes/: ft_printf.h  ft_printf_bonus.h  mylib.h
Cursus/Rank01/printf/lib/: Makefile
Cursus/Rank01/printf/srcs/: exec.test
Cursus/Rank02/fract-ol/: Makefile
Cursus/Rank02/fract-ol/includes/: fractol.h
Cursus/Rank02/fract-ol/srcs/: main.c
Cursus/Rank02/pipex/: Makefile  README.md  input
Cursus/Rank02/pipex/includes/: pipex.h
Cursus/Rank02/pipex/srcs/: command.c  env.c  file.c  free.c  main.c
Cursus/Rank02/push_swap/: .gitignore  Makefile  README.md  imgui.ini
Cursus/Rank02/push_swap/includes/: push_swap.h
Cursus/Rank02/push_swap/srcs/main/: file_utils.c  main.c  printing.c  push_swap.c  quicksort.c  reverse_rotation.c  rotation.c  sorting_stack.c  stack_access.c  stack_operations.c  stack_utility.c  utils.c
Cursus/Rank02/push_swap/visualizer/: imgui.ini  tests  visualizer
Cursus/Rank02/so_long/: .gitignore  Makefile  README.md
Cursus/Rank02/so_long/ascii_art/: prog_by  prog_login  prog_name  prog_ready  prog_running_1  prog_running_2  prog_running_3
Cursus/Rank02/so_long/includes/: macros.h  so_long.h  struct.h
Cursus/Rank02/so_long/maps/: Level10.ber  Level2.ber  Level3.ber  Level5.ber  Level6.ber  Level7.ber  Level8.ber  Level9.ber  test.ber
Cursus/Rank02/so_long/sprites/: exit.xpm  floor.xpm  wall.xpm
Cursus/Rank02/so_long/sprites/collectibles/: dish.xpm  sushi.xpm  taco.xpm
Cursus/Rank02/so_long/sprites/enemy/death/: frame1.xpm  frame2.xpm  frame3.xpm  frame4.xpm  frame5.xpm
Cursus/Rank02/so_long/sprites/enemy/idle/: frame1.xpm  frame2.xpm  frame3.xpm  frame4.xpm  frame5.xpm  frame6.xpm
Cursus/Rank02/so_long/sprites/enemy/run/: frame1.xpm  frame2.xpm  frame3.xpm  frame4.xpm  frame5.xpm  frame6.xpm
Cursus/Rank02/so_long/sprites/player/death/: frame6.xpm  frame7.xpm  frame8.xpm  frame9.xpm
Cursus/Rank02/so_long/sprites/player/idle/: frame1.xpm  frame2.xpm  frame3.xpm  frame4.xpm  frame5.xpm  frame6.xpm
Cursus/Rank02/so_long/sprites/player/run/: frame1.xpm  frame2.xpm  frame3.xpm  frame4.xpm  frame5.xpm  frame6.xpm
Cursus/Rank02/so_long/srcs/: game.c
Cursus/Rank02/so_long/srcs/enemy/: enemy.c  enemy_animation.c  enemy_destination.c  enemy_movement.c
Cursus/Rank02/so_long/srcs/map/: element_position.c  map.c  map_checking.c  map_creation.c  map_drawing.c  map_exit_drawing.c  map_loading.c  map_processing.c
Cursus/Rank02/so_long/srcs/player/: player.c  player_action.c  player_animation.c  player_resurrection.c  player_speed.c  player_state_processing.c  player_state_update.c
Cursus/Rank02/so_long/srcs/utils/: background_image.c  display.c  error_handling.c  images.c  initialization.c  key_handling.c  position_adjustment.c  process_entities.c  utils.c
Cursus/Rank03/Philosophers/: Makefile  main.c
Cursus/Rank03/Philosophers/philo_bonus/: main.c
Cursus/Rank04/CPP_Modules/CPP00/: README.md
Cursus/Rank04/CPP_Modules/CPP01/: README.md
Cursus/Rank04/CPP_Modules/CPP02/: Makefile  README.md
Cursus/Rank04/CPP_Modules/CPP02/ex02/: Makefile  zombie
Cursus/Rank04/CPP_Modules/CPP03/: README.md
Cursus/Rank04/CPP_Modules/CPP04/: README.md
Cursus/Rank04/CPP_Modules/CPP08/: README.md
Cursus/Rank04/CPP_Modules/CPP09/: README.md
Cursus/Rank04/NetPractice/: README.md
Cursus/Rank05/: ._minishell
Cursus/Rank05/minishell/: .gitignore  .minishell_history  Makefile  authorized_functions  minishell
Cursus/Rank05/minishell/ascii_art/: prog_name
Cursus/Rank05/minishell/includes/: minishell.h
Cursus/Rank05/minishell/srcs/: line_or_cmd_empty.c  loop.c  loop_checks.c  main.c
Cursus/Rank05/minishell/srcs/builtins/: ft_cd.c  ft_easter_egg.c  ft_echo.c  ft_env.c  ft_mslvl_see.c  ft_pwd.c  ft_unset.c
Cursus/Rank05/minishell/srcs/exec/: check_cmds.c  exec_and_run.c  manage_files.c  manage_heredoc.c  manage_path.c  manage_pid.c  manage_pipes.c  manage_primaries.c  manage_specials.c  manager.c
Cursus/Rank05/minishell/srcs/parsing/: clean_line.c  options.c
Cursus/Rank05/minishell/srcs/signaux/: ctrlc.c  signal.c
Minimicroshell/: bigger_for_understanding.c  microshell.c
Minimicroshell/other_version/: bigger_for_understanding.c  microshell.c
scripts/: automate-git-update.sh
(+104 files in other folders)
